[project]
name = "podping-hivepinger"
version = "1.0.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "hive-nectar>=0.2.14",
    "pydantic>=2.12.5",
    "single-source>=0.4.0",
    "typer>=0.24.1",
    "uvicorn>=0.41.0",
    "pytest>=7.0",
    "httpx>=0.24",
    "aiosqlite>=0.22.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
